--- a/Public/Index.html
+++ b/Public/Index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/Stil.css">
     <title>EndNote</title>
 </head>
-<script src="./Javascript/main.js" type="module"></script>
+<script src="/Javascript/main.js" type="module"></script>
 <body class="d-flex flex-column vh-100">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
