--- a/Public/HTML/form.html
+++ b/Public/HTML/form.html
@@ -21,8 +21,10 @@
                     <span style="width: 100px; padding-right: 5px;">Spol:</span>
                     <input type="radio" id="Moski" name="Spol" value="Moški" style="margin-right: 5px;" required>
                     <label for="Moski" style="margin-right: 30px;">Moški</label>
-                    <input type="radio" id="Zenski" name="Spol" value="Ženski" style="margin-right: 5px;" required>
-                    <label for="Zenski">Ženski</label>
+                    <input type="radio" id="Zenska" name="Spol" value="Ženska" style="margin-right: 5px;" required>
+                    <label for="Zenska">Ženska</label>
+                    <input type="radio" id="Nedoloceno" name="Spol" value="(Nedoločen)" style="margin-right: 5px;" required>
+                    <label for="Nedoloceno">Nedoločen</label>
                 </div>
             </div>
 
