--- a/Public/HTML/NewForm.html
+++ b/Public/HTML/NewForm.html
@@ -2,19 +2,15 @@
     <form action="/Vnos" method="post" id="Vnos">
 
         <div class="d-flex flex-column">
-            <div class="mb-3 row">
-                <div class="col-6">
-                    <div class="d-flex align-items-center">
-                        <label for="Ime" class="form-label flex-shrink-0">Ime:</label>
-                        <input type="text" name="Ime" id="Ime" class="form-control" required>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="d-flex align-items-center">
-                        <label for="Priimek" class="form-label flex-shrink-0">Priimek:</label>
-                        <input type="text" name="Priimek" id="Priimek" class="form-control" required>
-                    </div>
-                </div>
+
+            <div class="mb-3 d-flex flex-row">
+                <label for="Ime" class="form-label flex-shrink-0">Ime:</label>
+                <input type="text" name="Ime" id="Ime" class="form-control" required>
+            </div>
+
+            <div class="mb-3 d-flex flex-row">
+                <label for="Priimek" class="form-label flex-shrink-0">Priimek:</label>
+                <input type="text" name="Priimek" id="Priimek" class="form-control" required>
             </div>
 
             <div class="mb-3 d-flex flex-row">
