--- a/Public/Index.html
+++ b/Public/Index.html
@@ -17,8 +17,7 @@
         <ul>
             <li onclick="Dashboard()">Dashboard</li>
             <li onclick="Analitika()">Analitika</li>
-            <li onclick="Obrazec()">Obrazec</li>
-            <li></li>
+            <li onclick="" class="danger">Odjava</li>
         </ul>
         <footer>EndNote v1.0</footer>
     </nav>
