--- a/Public/login.html
+++ b/Public/login.html
@@ -3,54 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>UwU Page</title>
-    <style>
-        body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            background-color: #ffe4e1;
-            color: #ff69b4;
-            text-align: center;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 3em;
-        }
-        p {
-            font-size: 1.2em;
-        }
-        input[type="text"], input[type="password"] {
-            border: 2px dashed #ff69b4;
-            border-radius: 10px;
-            padding: 5px;
-            margin: 5px;
-        }
-        input[type="submit"] {
-            background-color: #ff69b4;
-            color: white;
-            border: none;
-            border-radius: 10px;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
-        input[type="submit"]:hover {
-            background-color: #ff1493;
-        }
-    </style>
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-    <h1>Hewwo, Fwiend! UwU</h1>
-    <p>Wewcome to dis supa kwute page! (✿◕‿◕)</p>
-    <div>
-        <p>Pwease wogin OwO</p>
-        <form action="/login" method="post">
-            <label for="username">Usewname UwU:</label><br>
-            <input type="text" id="username" name="username" placeholder="Enta youw usewname ><"><br>
-            <label for="password">Passwowd OwO:</label><br>
-            <input type="password" id="password" name="password" placeholder="Enta youw passwowd ><"><br>
-            <input type="submit" value="Wogin UwU">
+<body class="d-flex justify-content-center align-items-center vh-100 bg-light">
+    <div class="card p-4 shadow" style="width: 350px;">
+        <h3 class="text-center mb-4">Login</h3>
+        <form action="/login" method="POST">
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Login</button>
         </form>
+        <div class="text-center mt-3">
+            <a href="#" class="text-decoration-none">Forgot password?</a>
+        </div>
     </div>
-    <p>Haf a nyice day! (✧ω✧)</p>
 </body>
 </html>
