--- a/Public/login.html
+++ b/Public/login.html
@@ -18,7 +18,7 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Login</button>
+            <button type="submit" class="btn w-100" id="login">Login</button>
         </form>
         <div class="text-center mt-3">
             <a href="#" class="text-decoration-none">Forgot password?</a>
