--- a/Public/login.html
+++ b/Public/login.html
@@ -9,7 +9,7 @@
 </head>
 <body class="d-flex justify-content-center align-items-center vh-100 bg-light">
     <div class="card p-4 shadow" style="width: 350px;">
-        <h3 class="text-center mb-4">Login</h3>
+        <h3 class="text-center mb-4">ENDNOTE NAMESTITVE</h3>
         <form action="/login" method="POST">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
@@ -21,9 +21,6 @@
             </div>
             <button type="submit" class="btn w-100" id="login">Login</button>
         </form>
-        <div class="text-center mt-3">
-            <a href="#" class="text-decoration-none">Forgot password?</a>
-        </div>
     </div>
 </body>
 </html>
