--- a/Public/HTML/NewForm.html
+++ b/Public/HTML/NewForm.html
@@ -76,7 +76,9 @@
             
             <div class="mb-2 mt-2 d-flex flex-row align-items-center">
                 <label for="username" class="form-label flex-shrink-0">User</label>
-                <input type="text" name="username" id="username" class="form-control" autocomplete="off" required>
+                <select name="username" id="username" class="form-select" required disabled>
+
+                </select>
             </div>
 
             <hr><hr>
