--- a/Public/HTML/AdminForm.html
+++ b/Public/HTML/AdminForm.html
@@ -5,7 +5,7 @@
         <button class="btn" onclick="AdministracijaOS()">OS</button>
         <button class="btn" onclick="AdministracijaEndNote()">EndNote verzije</button>
     </div>
-    <div class="d-flex flex-row justify-content-center align-items-center">
+    <div class="d-flex flex-row justify-content-center mt-3">
         <div class="flex-grow-1 p-2 flex-column" id="AdminVnos">
             
         </div>
