--- a/Public/HTML/AdminUser.html
+++ b/Public/HTML/AdminUser.html
@@ -5,7 +5,7 @@
     </div>
     <hr><hr>
     <div class = "mb-2 mt-2 d-flex flex-column">
-        <label for="Username">Password</label>
+        <label for="Password">Password</label>
         <input type="text" name="Password" id="Password" class="form-control" required>
     </div>
     <hr><hr>
