--- a/Public/HTML/AdminUstanove.html
+++ b/Public/HTML/AdminUstanove.html
@@ -1,21 +1,23 @@
-<form action="AdminVnos" method="post" id="Vnos">
+<form action="/AdminVnosUstanove" method="post" id="Vnos">
+    <hr><hr>
     <div class = "mb-2 mt-2 d-flex flex-column">
         <label for="Kratica">Kratica</label>
         <input type="text" name="Kratica" id="Kratica" class="form-control" required>
     </div>
-    <hr><hr>
+    <hr>
     <div class = "mb-2 mt-2 d-flex flex-column">
         <label for="NazivPS">NazivPS</label>
         <input type="text" name="NazivPS" id="NazivPS" class="form-control" required>
     </div>
-    <hr><hr>
+    <hr>
     <div class = "mb-2 mt-2 d-flex flex-column">
         <label for="Ulica">Ulica</label>
         <input type="text" name="Ulica" id="Ulica" class="form-control" required>
     </div>
+    <hr><hr>
     <div class = "mb-2 mt-2">
         <input type="reset" value="Ponastavi" id="obrazecPonastavi">
         <input type="submit" value="Vnesi" id="obrazecPotrdi">
     </div>
-    <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabUstanove" hidden>
+    <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabustanove" hidden>
 </form>
