--- a/Public/HTML/AdminEN.html
+++ b/Public/HTML/AdminEN.html
@@ -1,9 +1,11 @@
-<form action="AdminVnos" method="post" id="Vnos">
+<form action="/AdminVnosEN" method="post" id="Vnos">
+    <hr><hr>
     <div class = "mb-2 mt-2 d-flex flex-column">
         <label for="NazivEndNoteVerzije">EndNote</label>
         <input type="text" name="NazivEndNoteVerzije" id="NazivEndNoteVerzije" class="form-control">
     </div>
+    <hr><hr>
     <input type="reset" value="Ponastavi" id="obrazecPonastavi">
     <input type="submit" value="Vnesi" id="obrazecPotrdi">
-    <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabEndNote" hidden>
+    <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabendnote" hidden>
 </form>
