--- a/Public/HTML/AdminOS.html
+++ b/Public/HTML/AdminOS.html
@@ -1,14 +1,16 @@
-<form action="AdminVnos" method="post" id="Vnos">
+<form action="/AdminVnosOS" method="post" id="Vnos">
+    <hr><hr>
     <div class = "mb-2 mt-2 d-flex flex-column">
         <label for="NazivOS">NazivOS</label>
         <input type="text" name="NazivOS" id="NazivOS" class="form-control" required>
     </div>
-    <hr><hr>
+    <hr>
     <div class = "mb-2 mt-2 d-flex flex-column">
         <label for="NazivOSAngl">NazivOSAngl</label>
         <input type="text" name="NazivOSAngl" id="NazivOSAngl" class="form-control" required>
     </div>
+    <hr><hr>
     <input type="reset" value="Ponastavi" id="obrazecPonastavi">
     <input type="submit" value="Vnesi" id="obrazecPotrdi">
-    <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabOS" hidden>
+    <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabos" hidden>
 </form>
