--- a/Public/HTML/AdminOS.html
+++ b/Public/HTML/AdminOS.html
@@ -11,6 +11,6 @@
     </div>
     <hr><hr>
     <input type="reset" value="Ponastavi" id="obrazecPonastavi">
-    <input type="submit" value="Vnesi" id="obrazecPotrdi">
+    <input type="submit" value="Shrani" id="obrazecPotrdi">
     <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabos" hidden>
 </form>
