--- a/Public/HTML/AdminUstanove.html
+++ b/Public/HTML/AdminUstanove.html
@@ -17,7 +17,7 @@
     <hr><hr>
     <div class = "mb-2 mt-2">
         <input type="reset" value="Ponastavi" id="obrazecPonastavi">
-        <input type="submit" value="Vnesi" id="obrazecPotrdi">
+        <input type="submit" value="Shrani" id="obrazecPotrdi">
     </div>
     <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabustanove" hidden>
 </form>
