--- a/Public/HTML/NewForm.html
+++ b/Public/HTML/NewForm.html
@@ -85,7 +85,7 @@
 
             <div class=" mb-2 mt-2 d-flex flex-row flex-grow-1 align-items-center">
                 <input type="reset" value="Ponastavi" class="form-control" id="obrazecPonastavi">
-                <input type="submit" value="Potrdi" class="form-control" id="obrazecPotrdi">
+                <input type="submit" value="Shrani" class="form-control" id="obrazecPotrdi">
             </div>
         </div>
     </form>
