--- a/Public/HTML/AdminUser.html
+++ b/Public/HTML/AdminUser.html
@@ -21,6 +21,6 @@
     </div>
     <hr><hr>
     <input type="reset" value="Ponastavi" id="obrazecPonastavi">
-    <input type="submit" value="Vnesi" id="obrazecPotrdi">
+    <input type="submit" value="Shrani" id="obrazecPotrdi">
     <input type="text" name="Tabela" id="Tabela" class="form-control" value="tablogin" hidden>
 </form>
