--- a/Public/Index.html
+++ b/Public/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/Stil.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <title>EndNote</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -36,24 +37,41 @@
 
     <nav>
         <header>EndNote</header>
-        <div class="container">
-            <hr><hr>
-            Pozdravljen <br> <span id="imeUporabnika"></span>
-            <hr><hr>
-        </div>
         <ul id = "navigacija">
             <li onclick="Dashboard()">Dashboard</li>
-            <li onclick="Analitika()">Analitika</li>
-            <li onclick="Administracija()">Administracija</li>
-            <li onclick="Odjava()" class="danger">Odjava</li>
+            <li onclick="Analitika()">Namestitve</li>
+            <li data-bs-toggle="collapse" data-bs-target="#adminMeni" aria-expanded="false" aria-controls="adminMeni">Administracija</li>
+                <ul class="collapse" id="adminMeni">
+                    <li onclick="Administracija()">Uporabniki</li>
+                    <li onclick="Administracija()">Ustanove</li>
+                    <li onclick="Administracija()">OS</li>
+                    <li onclick="Administracija()">EndNote</li>
+                </ul>
         </ul>
         <footer>EndNote v1.0</footer>
     </nav>
-    <div class="" id="Vsebina">
+    <div>
+        <div class="d-flex flex-row justify-content-end align-items-center" id="user">
+            <a href="#" class="d-flex flex-row align-items-center link-dark text-decoration-none" data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="dropdown me-3">
+                <i class="bi bi-person-badge-fill" style="font-size: 1.5rem;"></i>
+                <ul class="dropdown-menu text-small">
+                    <li class="dropdown-item" onclick="Odjava()">Odjava</li>
+                </ul>
+            </div>
+            <div class="lh-sm">
+                <div><span id="imeUporabnika"></span></div>
+                <div><span id="uporabnikAdmin"></span></div>
+            </div>
+            </a>
+        </div>
+        <div class="" id="Vsebina">
         <!--Od tu-->
                     
         <!--Do tu, se pobriše ko se izbere druga opcija-->
+        </div>
     </div>
+    
 
     <script>
         window.addEventListener("DOMContentLoaded", () => {
@@ -67,6 +85,8 @@
                         document.getElementById("imeUporabnika").innerText = result.username;
                         if(result.Admin != 1){
                         document.getElementById("navigacija").removeChild(document.getElementById("navigacija").children[2]);
+                        }else{
+                            document.getElementById("uporabnikAdmin").innerText = "admin";
                         }
                     }
                 })
