--- a/Public/HTML/AdminEN.html
+++ b/Public/HTML/AdminEN.html
@@ -1,11 +1,11 @@
-<form action="/AdminVnosEN" method="post" id="Vnos">
-    <hr><hr>
-    <div class = "mb-2 mt-2 d-flex flex-column">
-        <label for="NazivEndNoteVerzije">EndNote</label>
-        <input type="text" name="NazivEndNoteVerzije" id="NazivEndNoteVerzije" class="form-control">
-    </div>
-    <hr><hr>
-    <input type="reset" value="Ponastavi" id="obrazecPonastavi">
-    <input type="submit" value="Shrani" id="obrazecPotrdi">
-    <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabendnote" hidden>
-</form>
+<div id="obrazecContainer">
+    <form action="/AdminVnosEN" method="post" id="Vnos">
+        <div class = "mb-2 mt-2 d-flex flex-row">
+            <label for="NazivEndNoteVerzije">EndNote</label>
+            <input type="text" name="NazivEndNoteVerzije" id="NazivEndNoteVerzije" class="form-control">
+        </div>
+        <input type="reset" value="Ponastavi" id="obrazecPonastavi">
+        <input type="submit" value="Shrani" id="obrazecPotrdi">
+        <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabendnote" hidden>
+    </form>
+</div>
