--- a/Public/Index.html
+++ b/Public/Index.html
@@ -42,10 +42,10 @@
             <li onclick="Analitika()">Namestitve</li>
             <li data-bs-toggle="collapse" data-bs-target="#adminMeni" aria-expanded="false" aria-controls="adminMeni">Administracija</li>
                 <ul class="collapse" id="adminMeni">
-                    <li onclick="Administracija()">Uporabniki</li>
-                    <li onclick="Administracija()">Ustanove</li>
-                    <li onclick="Administracija()">OS</li>
-                    <li onclick="Administracija()">EndNote</li>
+                    <li onclick="Administracija('tablogin')">Uporabniki</li>
+                    <li onclick="Administracija('tabustanove')">Ustanove</li>
+                    <li onclick="Administracija('tabos')">OS</li>
+                    <li onclick="Administracija('tabendnote')">EndNote</li>
                 </ul>
         </ul>
         <footer>EndNote v1.0</footer>
