--- a/Public/HTML/AdminUstanove.html
+++ b/Public/HTML/AdminUstanove.html
@@ -1,23 +1,21 @@
-<form action="/AdminVnosUstanove" method="post" id="Vnos">
-    <hr><hr>
-    <div class = "mb-2 mt-2 d-flex flex-column">
+<div id="obrazecContainer">
+    <form action="/AdminVnosUstanove" method="post" id="Vnos">
+    <div class = "mb-2 mt-2 d-flex flex-row">
         <label for="Kratica">Kratica</label>
         <input type="text" name="Kratica" id="Kratica" class="form-control" required>
     </div>
-    <hr>
-    <div class = "mb-2 mt-2 d-flex flex-column">
+    <div class = "mb-2 mt-2 d-flex flex-row">
         <label for="NazivPS">NazivPS</label>
         <input type="text" name="NazivPS" id="NazivPS" class="form-control" required>
     </div>
-    <hr>
-    <div class = "mb-2 mt-2 d-flex flex-column">
+    <div class = "mb-2 mt-2 d-flex flex-row">
         <label for="Ulica">Ulica</label>
         <input type="text" name="Ulica" id="Ulica" class="form-control" required>
     </div>
-    <hr><hr>
     <div class = "mb-2 mt-2">
         <input type="reset" value="Ponastavi" id="obrazecPonastavi">
         <input type="submit" value="Shrani" id="obrazecPotrdi">
     </div>
     <input type="text" name="Tabela" id="Tabela" class="form-control" value="tabustanove" hidden>
-</form>
+    </form>
+</div>
