--- a/Public/HTML/AdminUstanove.html
+++ b/Public/HTML/AdminUstanove.html
@@ -5,8 +5,8 @@
         <input type="text" name="Kratica" id="Kratica" class="form-control" required>
     </div>
     <div class = "mb-2 mt-2 d-flex flex-row">
-        <label for="NazivPS">NazivPS</label>
-        <input type="text" name="NazivPS" id="NazivPS" class="form-control" required>
+        <label for="NazivUstanove">NazivPS</label>
+        <input type="text" name="NazivUstanove" id="NazivUstanove" class="form-control" required>
     </div>
     <div class = "mb-2 mt-2 d-flex flex-row">
         <label for="Ulica">Ulica</label>
