--- a/Public/HTML/NewForm.html
+++ b/Public/HTML/NewForm.html
@@ -1,4 +1,4 @@
-<div class="" id="">
+<div>
     <form action="/Vnos" method="post" id="Vnos">
 
         <div class="d-flex flex-column" id="obrazecContainer">
