IT WORKS, IT FINALLY WORKS
There could be bugs tho, beware all ye who enter here

--- a/Public/HTML/AdminUser.html
+++ b/Public/HTML/AdminUser.html
@@ -5,12 +5,12 @@
         <input type="text" name="OznakaSkrbnika" id="OznakaSkrbnika" class="form-control" required>
     </div>
     <div class = "mb-2 mt-2 d-flex flex-row align-items-center">
-        <label for="Username">Uporabniško Ime</label>
-        <input type="text" name="Username" id="Username" class="form-control" required>
+        <label for="UporabniskoIme">Uporabniško Ime</label>
+        <input type="text" name="UporabniskoIme" id="UporabniskoIme" class="form-control" required>
     </div>
     <div class = "mb-2 mt-2 d-flex flex-row align-items-center">
-        <label for="Password">Geslo</label>
-        <input type="text" name="Password" id="Password" class="form-control" required>
+        <label for="UporabniskoGeslo">Geslo</label>
+        <input type="text" name="UporabniskoGeslo" id="UporabniskoGeslo" class="form-control" required>
     </div>
     <div class = "mb-2 mt-2 d-flex flex-row align-items-center">
         <label for="Admin">Admin</label>
