--- a/Public/HTML/AdminUstanove.html
+++ b/Public/HTML/AdminUstanove.html
@@ -1,16 +1,24 @@
 <div id="obrazecContainer">
     <form action="/AdminVnosUstanove" method="post" id="Vnos">
     <div class = "mb-2 mt-2 d-flex flex-row">
-        <label for="Kratica">Kratica</label>
-        <input type="text" name="Kratica" id="Kratica" class="form-control" required>
+        <label for="OznakaUstanove">Oznaka Ustanove</label>
+        <input type="text" name="OznakaUstanove" id="OznakaUstanove" class="form-control" required>
     </div>
     <div class = "mb-2 mt-2 d-flex flex-row">
-        <label for="NazivUstanove">NazivPS</label>
+        <label for="NazivUstanove">Naziv Ustanove</label>
         <input type="text" name="NazivUstanove" id="NazivUstanove" class="form-control" required>
     </div>
     <div class = "mb-2 mt-2 d-flex flex-row">
         <label for="Ulica">Ulica</label>
         <input type="text" name="Ulica" id="Ulica" class="form-control" required>
+    </div>
+    <div class = "mb-2 mt-2 d-flex flex-row">
+        <label for="Kraj">Kraj</label>
+        <input type="text" name="Kraj" id="Kraj" class="form-control" required>
+    </div>
+    <div class = "mb-2 mt-2 d-flex flex-row">
+        <label for="PostnaStevilka">Poštna Številka</label>
+        <input type="text" name="PostnaStevilka" id="PostnaStevilka" class="form-control" required>
     </div>
     <div class = "mb-2 mt-2">
         <input type="reset" value="Ponastavi" id="obrazecPonastavi">
