--- a/Public/HTML/NewForm.html
+++ b/Public/HTML/NewForm.html
@@ -18,7 +18,7 @@
             <div class="mb-2 mt-2 d-flex flex-row align-items-center">
                 <label for="Spol" class="form-label flex-shrink-0">Spol</label>
                 <select name="Spol" id="Spol" class="form-select">
-                    <option value="(Nedoločen)">Nedoločen</option>
+                    <option value="Nedoločen">Nedoločen</option>
                     <option value="Moški">Moški</option>
                     <option value="Ženska">Ženska</option>
                 </select>
@@ -75,8 +75,8 @@
             </div>
             
             <div class="mb-2 mt-2 d-flex flex-row align-items-center">
-                <label for="username" class="form-label flex-shrink-0">User</label>
-                <select name="username" id="username" class="form-select" required disabled>
+                <label for="UporabniskoIme" class="form-label flex-shrink-0">Skrbnik</label>
+                <select name="UporabniskoIme" id="UporabniskoIme" class="form-select" required disabled>
 
                 </select>
             </div>
