--- a/Public/login.html
+++ b/Public/login.html
@@ -12,12 +12,12 @@
         <h3 class="text-center mb-4">ENDNOTE NAMESTITVE</h3>
         <form action="/login" method="POST">
             <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
+                <label for="UporabniskoIme" class="form-label" style="width: 300px !important;">Uporabniško Ime</label>
+                <input type="text" class="form-control" id="UporabniskoIme" name="UporabniskoIme" placeholder="Vpišite uporabniško ime" required>
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+                <label for="UporabniskoGeslo" class="form-label">Geslo</label>
+                <input type="password" class="form-control" id="UporabniskoGeslo" name="UporabniskoGeslo" placeholder="Vpišite geslo" required>
             </div>
             <button type="submit" class="btn w-100" id="login">Login</button>
         </form>
