--- a/Public/HTML/Dashboard.html
+++ b/Public/HTML/Dashboard.html
@@ -1,19 +1,24 @@
 <div class="container">
     <div class="d-flex">
-        <div class="d-flex flex-grow-1 align-items-center">
-            <div class="d-flex flex-column shadow justify-content-center align-items-center" id="StNamestitev" >
-                <div id="StNam">
-                </div>
-                <div>
-                    Namestitev
+        <div class="flex-grow-1 d-flex flex-column justify-content-center align-items-center">
+            <div class="d-flex flex-grow-1 align-items-center">
+                <div class="d-flex flex-column shadow justify-content-center align-items-center" id="StNamestitev" >
+                    <div id="StNam">
+                    </div>
+                    <div>
+                        Namestitev
+                    </div>
                 </div>
             </div>
+            <canvas id="StNamestitevLeto"></canvas>
         </div>
-
         <div class="flex-grow-1">
             <canvas id="StUstanov"></canvas>
         </div>
-
+    </div>
+    <div class="d-flex flex-row">
+        
+        
     </div>
     <div class="d-flex justify-content-center align-items-center" style="margin-top: 60px;">
         <div class="flex-grow-1">
