Popravljeno urejanje vnosov

--- a/Public/HTML/NewForm.html
+++ b/Public/HTML/NewForm.html
@@ -70,7 +70,7 @@
             </div>
             
             <div class="mb-2 mt-2 d-flex flex-row align-items-center">
-                <label for="Datum" class="form-label flex-shrink-0">Datum</label>
+                <label for="Datum" class="form-label flex-shrink-0">Datum Namestitve</label>
                 <input type="date" name="Datum" id="Datum" class="form-control" required>
             </div>
             
