--- a/Public/HTML/Dashboard.html
+++ b/Public/HTML/Dashboard.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="d-flex">
         <div class="flex-grow-1">
-            <canvas id="StNamestitevLeto" style="height:212px; width: 200px;"></canvas>
+            <canvas id="StNamestitevLeto" style="height:396px !important; width: 200px; max-height: 396px !important;"></canvas>
         </div>
         <div class="flex-grow-1">
-            <canvas id="StUstanov"></canvas>
+            <canvas id="StUstanov" style="height:422px !important; width: 890px; max-height: 422px !important; max-width: 890px !important;"></canvas>
         </div>
     </div>
     <div class="d-flex justify-content-center align-items-center" style="margin-top: 60px;">
